# rmi_system

./: .gitignore  CHANGELOG.org  README.md
doc/: Projektausarbeitung.tex  ausarbeitung.tex  literatur.bib
rmi_system/: meson.build  meson_options.txt
rmi_system/include/: error_handler.h  remoteFunctionCaller.h  skeleton.h
rmi_system/include/rmi_system/: error_handler.h  remoteFunctionCaller.h  remoteFunctionCaller.hpp  rmi_exception.h  rmi_system_error.h  rmi_user_error.h  skeleton.h  statistics_manager_client.h  statistics_manager_impl.h  user_error.h
rmi_system/include/rmi_user/: abstractClass.h  person.h  personStub.h
rmi_system/src/: functioncall.proto  main.cpp  returnvalue.proto  statistics_server.proto
rmi_system/src/client/: main.cpp
rmi_system/src/grpc/: greeter_client.cpp  greeter_impl.cpp  statistics_client.cpp  statistics_server.cpp
rmi_system/src/rmi/: remoteFunctionCaller.cpp  skeleton.cpp
rmi_system/src/server/: abstractMethods.cpp  main.cpp  person.cpp
