option('asio_include_dir', type : 'string', value : '/home/emilw/Dokumente/asio-1.20.0/include', description : 'the include dir of asio')
option('doctest_include_dir', type : 'string', value : '', description : 'the include dir of doctest')
option('cli11_include_dir', type : 'string', value : '/home/emilw/Dokumente', description : 'the dir containing CLI11.hpp')
option('json_include_dir', type : 'string', value : '/home/emilw/Dokumente/json/include', description : 'the include dir of json')
option('spdlog_include_dir', type : 'string', value : '/home/emilw/Dokumente/spdlog/include', description : 'the include dir of spdlog')