option('asio_include_dir', type : 'string', value : '/mnt/c/cpp_libraries/asio-1.20.0/include', description : 'the include dir of asio')
option('doctest_include_dir', type : 'string', value : '', description : 'the include dir of doctest')
option('cli11_include_dir', type : 'string', value : '/mnt/c/cpp_libraries/', description : 'the dir containing CLI11.hpp')
option('json_include_dir', type : 'string', value : '/mnt/c/cpp_libraries/json/include', description : 'the include dir of json')
option('spdlog_include_dir', type : 'string', value : '/mnt/c/cpp_libraries/spdlog/include', description : 'the include dir of spdlog')