option('asio_include_dir', type : 'string', value : '/home/emilw/cpp_libraries/asio-1.20.0/include', description : 'the include dir of asio')
option('cli11_include_dir', type : 'string', value : '/home/emilw/cpp_libraries', description : 'the dir containing CLI11.hpp')
option('json_include_dir', type : 'string', value : '/home/emilw/cpp_libraries', description : 'the include dir of json')
option('spdlog_include_dir', type : 'string', value : '/home/emilw/cpp_libraries/include', description : 'the include dir of spdlog')